Add share type configuration to config.yaml
Added share type configuration with read-only option and path.

--- a/ollama/config.yaml
+++ b/ollama/config.yaml
@@ -10,6 +10,9 @@ url: https://ollama.com
 map:
   - config:rw
   - share:rw
+  - type: share
+    read_only: False
+    path: ~/.ollama
 image: docker.io/ollama/ollama
 init: false
 ingress: true
