--- a/ollama/config.yaml
+++ b/ollama/config.yaml
@@ -12,7 +12,7 @@ map:
   - share:rw
   - type: share
     read_only: False
-    path: /home/root/.ollama
+    path: /root/.ollama/
 image: docker.io/ollama/ollama
 init: false
 ingress: true
